# ranger-agent

./: .coveragerc  .gitignore  .gitreview  .testr.conf  AUTHORS  CHANGES  Dockerfile  HACKING.rst  MANIFEST.in  Makefile  README  README.md  README.rst  bandit.yaml  ord_db.sql  requirements.txt  run_ranger-agent.sh  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
charts/ranger-agent/: Chart.yaml  values.yaml
charts/ranger-agent/charts/: helm-toolkit-0.1.0.tgz
charts/ranger-agent/templates/: configmap-bin.yaml  configmap-etc.yaml  deployment-ranger-agent-api.yaml  deployment-ranger-agent-engine.yaml  ingress-ranger-agent-api.yaml  job-bootstrap.yaml  job-db-drop.yaml  job-db-init.yaml  job-db-sync.yaml  pdb-osapi.yaml  service-osapi.yaml
charts/ranger-agent/templates/etc/: _ranger_agent_sudoers.tpl  _rootwrap.conf.tpl
doc/: Makefile
doc/api_samples/: ord-notifier-response.json  ord-notifier.json  rds-listener.json
doc/source/: conf.py  index.rst
doc/source/_static/: jquery.tweet.js
etc/: api-paste.ini  ord.conf  ranger-agent.conf  ranger-agent.sample
ord/: __init__.py  i18n.py  service.py
ord/api/: __init__.py  app.py  config.py  middleware.py
ord/api/controllers/: root.py
ord/api/controllers/v1/: api.py  root.py
ord/client/: client.py  getrepo.py  heat.py  rpcapi.py  rpcengine.py  utils.py
ord/cmd/: __init__.py  api.py  engine.py  fake_rds_listener.py  manage.py
ord/common/: exceptions.py  security_headers_hook.py  utils.py
ord/db/: api.py  base.py  migration.py  model_base.py
ord/db/sqlalchemy/: api.py  migration.py  models.py
ord/db/sqlalchemy/migrate_repo/: manage.py  migrate.cfg
ord/db/sqlalchemy/migrate_repo/versions/: 001_ord.py
ord/engine/: app.py  engine.py  workerfactory.py
ord/hacking/: checks.py
ord/openstack/common/: _i18n.py  local.py  log.py
ord/tests/: base.py
ord/tests/unit/api/controllers/v1/: test_api.py
ord/tests/unit/client/: test_getrepo.py  test_heat.py  test_rpcapi.py  test_rpcengine.py
ord/tests/unit/common/: test_exceptions.py  test_utils.py
ord/tests/unit/db/sqlalchemy/: test_api.py
ord/tests/unit/engine/: test_workerfactory.py  test_workerthread.py
releasenotes/source/: conf.py  index.rst
tools/: check_unit_test_structure.sh  clear_install_files.sh  colorizer.py  openrc  ord_db.sql  ranger-agent-db.sh  ranger-agent-db.sql  run_ranger-agent.sh  run_ranger_agent.sh  sample-localrc
tools/.ssh/: config  ranger-agent  ranger_agent
