[metadata]
name = ranger-agent
version = 2016.3.0
summary = Ranger Resource Distributor
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = ord
data_files =
    /etc/ord =
       etc/ord.conf
       etc/api-paste.ini

[entry_points]
console_scripts=
    ord-api = ord.cmd.api:main
    ord-engine = ord.cmd.engine:main
    ord-db-manage = ord.db.sqlalchemy.impl_sqlalchemy:Connection
    ord-dbsync = ord.cmd.manage:dbsync
    ord-fake-rds-listener = ord.cmd.fake_rds_listener:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ord/locale
domain = ord

[update_catalog]
domain = ord
output_dir = ord/locale
input_file = ord/locale/ord.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ord/locale/ord.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 1

