[metadata]
name = ranger-agent
version = 2016.3.0
summary = Ranger Resource Distributor
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = ranger-agent
data_files =
    /etc/ranger-agent =
       etc/ranger-agent.conf
       etc/api-paste.ini

[entry_points]
console_scripts=
    ranger-agent-api = ord.cmd.api:main
    ranger-agent-engine = ord.cmd.engine:main
    ranger-agent-db-manage = ord.db.sqlalchemy.impl_sqlalchemy:Connection
    ranger-agent-dbsync = ord.cmd.manage:dbsync
    ranger-agent-fake-rds-listener = ord.cmd.fake_rds_listener:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ranger-agent/locale
domain = ranger-agent

[update_catalog]
domain = ranger-agent
output_dir = ranger-agent/locale
input_file = ranger-agent/locale/ranger-agent.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ranger-agent/locale/ranger-agent.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 1

